Fix header wrapping

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1129,7 +1129,7 @@ a.site-title:visited, a.page-link:visited {
 }
 
 .post-title {
-  white-space: nowrap;
+  white-space: balance;
 }
 
 .rss-subscribe {
